--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "dotenv": "^5.0.0",
+    "enzyme": "^3.3.0",
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
     "jsonwebtoken": "^8.1.1",
@@ -48,6 +49,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.2.0",
     "sodium": "^2.0.3",
     "superagent": "^3.8.2",
